@@ -6,7 +6,6 @@ import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
-import java.util.stream.Collectors;
 
 
 public final class Scheduler {
@@ -23,39 +22,59 @@ public final class Scheduler {
         return clock;
     }
 
-    public void runPending() {
-        jobs.stream()
-            .filter(j -> j.shouldRun())
-            .forEach(j -> {
-                j.update();
-                executorService.submit(j.getTask());
-            });
-    }
-
-    public List<Future<Void>> runPendingCollect() {
-        List<Future<Void>> results = jobs.stream()
+    public List<Future<Void>> runPending() {
+        return jobs.stream()
             .filter(j -> j.shouldRun())
             .map(j -> {
-                j.update();
-                return executorService.submit(j.getTask());
+                Future<Void> result = executorService.submit(j.getTask());
+                j.setLastRun(result);
+                return result;
             })
-            .collect(Collectors.toList());
-
-        return results;
+            .toList();
     }
 
-    public List<Future<Void>> runPendingCollectBlocking() throws InterruptedException{
-        List<ScheduleCallable> tasks = jobs.stream()
+    public List<Future<Void>> runPendingBlocking() throws InterruptedException{
+
+        List<ScheduledTask> tasks = jobs.stream()
             .filter(j -> j.shouldRun())
-            .map(e -> {
-                e.update();
-                return e.getTask();
-            })
-            .collect(Collectors.toList());
-        
-        List<Future<Void>> futures = executorService.invokeAll(tasks);
+            .toList();
+
+        List<ScheduleCallable> callables = tasks.stream()
+            .map(t -> {return t.getTask();})  
+            .toList();      
+
+        List<Future<Void>> futures = executorService.invokeAll(callables);
+
+        for (int i=0; i<tasks.size(); i++) {
+            tasks.get(i).setLastRun(futures.get(i));
+        }
+
         return futures;
     }
+
+    // public List<Future<Void>> runPendingCollect() {
+    //     List<Future<Void>> results = jobs.stream()
+    //         .filter(j -> j.shouldRun())
+    //         .map(j -> {
+    //             j.setLastRun();
+    //             return executorService.submit(j.getTask());
+    //         })
+    //         .collect(Collectors.toList());
+
+    //     return results;
+    // }
+
+    // public List<Future<Void>> runPendingCollectBlocking() throws InterruptedException{
+    //     List<ScheduleCallable> tasks = jobs.stream()
+    //         .filter(j -> j.shouldRun())
+    //         .map(e -> {
+    //             return e.getTask();
+    //         })
+    //         .collect(Collectors.toList());
+        
+    //     List<Future<Void>> futures = executorService.invokeAll(tasks);
+    //     return futures;
+    // }
 
     public ArrayList<ScheduledTask> getJobs() {
         return jobs;
@@ -71,5 +90,9 @@ public final class Scheduler {
 
     public void removeJob(String name) {
         jobs.removeIf(j -> j.getName().equals(name));   
+    }
+
+    public void shutDown() {
+        executorService.shutdown();
     }
 }
